--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "chart.js": "^3.7.1",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-confetti": "^6.0.1",
+    "react-countdown-circle-timer": "^3.0.9",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
